# goit-cs-hw-05

./: README.md
map_reducer/: map_reducer.py  pyproject.toml
parser/: parser.py  pyproject.toml
